se agrega mision, vision e historia en index

--- a/index.html
+++ b/index.html
@@ -38,9 +38,27 @@
   <!-- Contenido principal -->
   <div class="container my-5">
     <div class="text-center">
-      <h1 class="display-4">Bienvenido </h1>
+      <h1 class="display-4">Bienvenido</h1>
       <p class="lead">Explora nuestros productos, ubícanos fácilmente y descubre las mejores ofertas.</p>
       <a href="productos.html" class="btn btn-primary btn-lg">Ver productos</a>
+    </div>
+  </div>
+
+  <!-- Sección Visión, Misión e Historia -->
+  <div class="container my-5">
+    <div class="row text-center">
+      <div class="col-md-4">
+        <h3 class="text-primary">Visión</h3>
+        <p>Convertirnos en la empresa líder en la venta de tecnología en la región, ofreciendo soluciones innovadoras que mejoren la vida de las personas y las acerquen al futuro digital.</p>
+      </div>
+      <div class="col-md-4">
+        <h3 class="text-success">Misión</h3>
+        <p>Brindar a nuestros clientes productos tecnológicos de alta calidad a precios competitivos, acompañados de un servicio excepcional que garantice confianza y satisfacción.</p>
+      </div>
+      <div class="col-md-4">
+        <h3 class="text-warning">Historia</h3>
+        <p>Somos una empresa nueva, fundada en 2025 por jóvenes emprendedores apasionados por la tecnología. Nacimos con el propósito de acercar la innovación a cada hogar y negocio de nuestra comunidad.</p>
+      </div>
     </div>
   </div>
 
