--- a/productos.html
+++ b/productos.html
@@ -158,7 +158,7 @@
 
   <!-- Footer -->
   <footer class="bg-dark text-light text-center py-3 mt-auto">
-    <p class="mb-0">© 2025 Mi Sitio - Todos los derechos reservados</p>
+    <p class="mb-0">Astrid Zelada - Cesar Caal</p>
   </footer>
 
   <!-- Bootstrap JS -->
